update captions and text

--- a/bee-hotel.html
+++ b/bee-hotel.html
@@ -7,6 +7,7 @@ oneliner: "How might we use local art to educate, empower, and enrich the commun
 images:
   - image_path: ../assets/images/projects/bee-hotel/8.JPG
     title: Wild for Bees
+    caption-right: Inspired by a bee hive hanging from a tree, this structure travelled around the city to community events and conferences, before ending up in its permanent outdoor home at Toronto Botanical Garden.
 
   - image_path: ../assets/images/projects/bee-hotel/9.JPG
     title: Wild for Bees
@@ -20,15 +21,18 @@ images:
 
   - image_path: ../assets/images/projects/bee-hotel/2.JPG
     title: Wild for Bees
+    caption-right: At Black Creek Pioneer Village, the red bee hotels, inspired by the iconic Monopoly house tokens, sit contrasting amongst the tall grass. 
 
   - image_path: ../assets/images/projects/bee-hotel/3.jpg
     title: Wild for Bees
+    caption-right: A hill-like structure sits in a vast field in Guelph, at the newly developed Pollinator Park.  
 
   - image_path: ../assets/images/projects/bee-hotel/4.jpg
     title: Wild for Bees
 
   - image_path: ../assets/images/projects/bee-hotel/5.JPG
     title: Wild for Bees
+    caption-right: On the rooftop of the Fairmont Royal York hotel, the skyline is reflected into the largest bee hotel constructed.  
 
   - image_path: ../assets/images/projects/bee-hotel/6.JPG
     title: Wild for Bees
