--- a/sandbox.html
+++ b/sandbox.html
@@ -19,7 +19,7 @@ images:
     title: AR Sandbox
 
 video:
-  - videoPath: "https://player.vimeo.com/video/130944069"
+  - videoPath: 130944069
 
 client: "Ryerson University / TIFF Bell Lightbox"
 date: "April 2015"
