--- a/sandbox.html
+++ b/sandbox.html
@@ -18,8 +18,7 @@ images:
   - image_path: ../assets/images/projects/sandbox/7.jpg
     title: AR Sandbox
 
-video:
-  - videoPath: 130944069
+videoPath: 130944069
 
 client: "Ryerson University / TIFF Bell Lightbox"
 date: "April 2015"
