--- a/sandbox.html
+++ b/sandbox.html
@@ -9,14 +9,20 @@ oneliner: "How might nostalgic, playful interactions with digital media be utili
 images:
   - image_path: ../assets/images/projects/sandbox/6.jpg
     title: AR Sandbox
+    caption-right: Installation as part of TIFF's digiPlayspace, in 2016.
+
   - image_path: ../assets/images/projects/sandbox/5.jpg
-    title: AR Sandbox
-  - image_path: ../assets/images/projects/sandbox/2.jpg
     title: AR Sandbox
   - image_path: ../assets/images/projects/sandbox/1.jpg
     title: AR Sandbox
-  - image_path: ../assets/images/projects/sandbox/7.jpg
+  - image_path: ../assets/images/projects/sandbox/8.jpg
     title: AR Sandbox
+    caption-right: The AR Sandbox also travelled temporarly to the Royal Ontario Museum, to complement a short-term display of a Mars Rover prototype.
+
+  - image_path: ../assets/images/projects/sandbox/2.jpg
+    title: AR Sandbox
+    caption-right: The project now lives at Ryerson University, within the Digital Media Experience Lab. 
+
 
 videoPath: "130944069"
 
