--- a/sensing-history.html
+++ b/sensing-history.html
@@ -4,31 +4,54 @@ color: "rgb(72,44,61)"
 title: Sensing History
 oneliner: "How might we create the multisensory opportunities to engage in a sense of discovery with storytelling through museum artifacts?"
 
+videoPath: "134496066"
+
 images:
-  - image_path: ../assets/images/projects/sensing-history/d3.jpg
-    title: Sensing History
   - image_path: ../assets/images/projects/sensing-history/1.jpg
     title: Sensing History
+
   - image_path: ../assets/images/projects/sensing-history/3.jpg
     title: Sensing History
+
   - image_path: ../assets/images/projects/sensing-history/4.jpg
     title: Sensing History
+
+  - image_path: ../assets/images/projects/sensing-history/5(2).jpg
+    title: Sensing History
+
+
   - image_path: ../assets/images/projects/sensing-history/d1.jpg
     title: Sensing History
+    body-heading: Design & Development
+    body-text: Three prototypes were developed over the course of the project, illustrating various artifact stories through engaging multisensory responses. I worked alongside a multi-modal educational researcher, Melanie McBride, to develop natural scents that were revealed as part of the interactions. 3D printing was also utilized to add tactile interactives, using simple physical computing elements to reveal imagery and text based on where users were touching the artifact reproductions.
+
   - image_path: ../assets/images/projects/sensing-history/d2.jpg
     title: Sensing History
-  - image_path: ../assets/images/projects/sensing-history/d7.jpg
-    title: Sensing History
-  - image_path: ../assets/images/projects/sensing-history/d6.jpg
-    title: Sensing History
-  - image_path: ../assets/images/projects/sensing-history/d5.jpg
-    title: Sensing History
-  - image_path: ../assets/images/projects/sensing-history/d8.jpg
-    title: Sensing History
-  - image_path: ../assets/images/projects/sensing-history/d9.jpg
-    title: Sensing History
+
+  - image_path: ../assets/images/projects/sensing-history/d3.jpg
+    title: Sensing History 
+
   - image_path: ../assets/images/projects/sensing-history/s1.jpg
     title: Sensing History
+
+  - image_path: ../assets/images/projects/sensing-history/d5.jpg
+    title: Sensing History
+
+  - image_path: ../assets/images/projects/sensing-history/d6.jpg
+    title: Sensing History
+
+  - image_path: ../assets/images/projects/sensing-history/d7.jpg
+    title: Sensing History
+
+  - image_path: ../assets/images/projects/sensing-history/d8.jpg
+    title: Sensing History
+
+  - image_path: ../assets/images/projects/sensing-history/d9.jpg
+    title: Sensing History
+
+  - image_path: ../assets/images/projects/sensing-history/mwxx01.jpg
+    title: Sensing History
+    caption-right: Speaking as part of a panel on multisensory exhibits, at the Museums and the Web Conference in Los Angeles, 2016.
 
 client: "Research Project, Ryerson University"
 date: "September 2015"
