--- a/freeform.html
+++ b/freeform.html
@@ -4,23 +4,35 @@ color: "rgb(141,177,171)"
 title: Free Form
 oneliner: "How might we democratize 3D printing and design?"
 
+videoPath: "176622179"
+
 images:
   - image_path: ../assets/images/projects/freeform/1.jpg
     title: FreeForm
+
   - image_path: ../assets/images/projects/freeform/3.jpg
     title: FreeForm
+
   - image_path: ../assets/images/projects/freeform/4.jpg
     title: FreeForm
+
   - image_path: ../assets/images/projects/freeform/2.jpg
     title: FreeForm
+
   - image_path: ../assets/images/projects/freeform/8.jpg
     title: FreeForm
+    body-heading: Design Sprint Process
+    body-text: Developed in a short two-week sprint, this experience design exercise allowed for an exploration into utilizing prototyping methods to tell a product story. Low-fidelity mockups were developed as a result of workshops that uncovered user needs and interaction modes, before a 'Kickstarter'-like video was developed to succinctly pitch the product's value. The business-case for this project was pitched in a separate exercise.
+
   - image_path: ../assets/images/projects/freeform/7.jpg
     title: FreeForm
+
   - image_path: ../assets/images/projects/freeform/5.jpg
     title: FreeForm
+
   - image_path: ../assets/images/projects/freeform/9.jpg
     title: FreeForm
+
   - image_path: ../assets/images/projects/freeform/6.jpg
     title: FreeForm
     
