--- a/cube-hotel.html
+++ b/cube-hotel.html
@@ -7,17 +7,13 @@ oneliner: "How might deployable hotels adapt to any site condition or size, to c
 
 
 images:
-  - image_path: ../assets/images/projects/cube-hotel/8.jpg
-    title: CUBE Hotel
-    
-  - image_path: ../assets/images/projects/cube-hotel/9.jpg
+  - image_path: ../assets/images/projects/cube-hotel/2.jpg
     title: CUBE Hotel
 
-  - image_path: ../assets/images/projects/cube-hotel/10.jpg
+  - image_path: ../assets/images/projects/cube-hotel/1.jpg
     title: CUBE Hotel
-
-  - image_path: ../assets/images/projects/cube-hotel/11.jpg
-    title: CUBE Hotel
+    body-heading: Advertising Meets Hospitality
+    body-text: The concept deconstructs the traditional hotel model to its core elements: living units and common amenities. These cube modules are clad in semi-transparent louvers that together complete the image of a QR codes, triggering digital advertising in an age of ubiquitous augmented reality wearables. This concept not only allows for adaptable, rapidly deployable configurations of living units, but also functioning as large-scale billboards in urban contexts. 
 
   - image_path: ../assets/images/projects/cube-hotel/5.jpg
     title: CUBE Hotel
@@ -31,11 +27,18 @@ images:
   - image_path: ../assets/images/projects/cube-hotel/6.jpg
     title: CUBE Hotel
 
-  - image_path: ../assets/images/projects/cube-hotel/2.jpg
+  - image_path: ../assets/images/projects/cube-hotel/8.jpg
+    title: CUBE Hotel
+    
+  - image_path: ../assets/images/projects/cube-hotel/9.jpg
     title: CUBE Hotel
 
-  - image_path: ../assets/images/projects/cube-hotel/1.jpg
+  - image_path: ../assets/images/projects/cube-hotel/10.jpg
     title: CUBE Hotel
+
+  - image_path: ../assets/images/projects/cube-hotel/11.jpg
+    title: CUBE Hotel
+
 
 
 
