--- a/cube-hotel.html
+++ b/cube-hotel.html
@@ -12,8 +12,8 @@ images:
 
   - image_path: ../assets/images/projects/cube-hotel/1.jpg
     title: CUBE Hotel
-    body-heading: Advertising Meets Hospitality
-    body-text: The concept deconstructs the traditional hotel model to its core elements: living units and common amenities. These cube modules are clad in semi-transparent louvers that together complete the image of a QR codes, triggering digital advertising in an age of ubiquitous augmented reality wearables. This concept not only allows for adaptable, rapidly deployable configurations of living units, but also functioning as large-scale billboards in urban contexts. 
+    body-heading: "Advertising Meets Hospitality"
+    body-text: "The concept deconstructs the traditional hotel model to its core elements: living units and common amenities. These cube modules are clad in semi-transparent louvers that together complete the image of a QR codes, triggering digital advertising in an age of ubiquitous augmented reality wearables. This concept not only allows for adaptable, rapidly deployable configurations of living units, but also functioning as large-scale billboards in urban contexts." 
 
   - image_path: ../assets/images/projects/cube-hotel/5.jpg
     title: CUBE Hotel
