--- a/ctgu.html
+++ b/ctgu.html
@@ -5,24 +5,26 @@ color: "rgb(160,206,217)"
 oneliner: "How might we create a university complex that floats on water?"
 
 images:
+  - image_path: ../assets/images/projects/ctgu/13.jpg
+    title: CTGU
   - image_path: ../assets/images/projects/ctgu/1.jpg
     title: CTGU
-  - image_path: ../assets/images/projects/ctgu/3.jpg
+  - image_path: ../assets/images/projects/ctgu/2.jpg
+    title: CTGU
+  - image_path: ../assets/images/projects/ctgu/12.jpg
+    title: CTGU
+  - image_path: ../assets/images/projects/ctgu/10.jpg
     title: CTGU
   - image_path: ../assets/images/projects/ctgu/5.jpg
     title: CTGU
   - image_path: ../assets/images/projects/ctgu/9.jpg
     title: CTGU
+  - image_path: ../assets/images/projects/ctgu/3.jpg
+    title: CTGU
+    caption-right: "The connection to the campus waterways, and the flow of urban run-off through the overall landscape, was a driving principle of the project. Mycofiltration is integrated into the pedestrian boardwalk network under the building.The site boundary is highlighted in red to illustrate the ecological context."
   - image_path: ../assets/images/projects/ctgu/4.jpg
     title: CTGU
-  - image_path: ../assets/images/projects/ctgu/2.jpg
-    title: CTGU
-  - image_path: ../assets/images/projects/ctgu/10.jpg
-    title: CTGU
-  - image_path: ../assets/images/projects/ctgu/12.jpg
-    title: CTGU
-  - image_path: ../assets/images/projects/ctgu/13.jpg
-    title: CTGU
+
 
 client: "China Three Gorges University"
 date: "May - June 2012"
@@ -32,5 +34,5 @@ date: "May - June 2012"
 
 <p>The design explores concepts in identity, landscape and interdisciplinary research. The academic departments are combined into one megastructure — a new reform towards cross-disciplinary innovation. Its minimal footprint creates new opportunities for public space on the water, intersecting academics and play. The natural wetland is maximized as an asset to the site, rather than an obstacle for development, allowing water to freely flow under the building. A system of mycofiltration (fungi as filters) embedded within the floating pedestrian walkways purifies urban run-off down the surrounding hill, before entering the campus waterways.</p>
 
-<p>This project was the culmination of travelling across Eastern and Northern China, as documented through <a href="/projects/china-study" target="_blank">sketching.</a></p>
+<p>This project was the culmination of travelling across Eastern and Northern China, as documented through <a href="/china-study" target="_blank">sketching.</a></p>
 
