--- a/ctgu.html
+++ b/ctgu.html
@@ -15,13 +15,16 @@ images:
     title: CTGU
   - image_path: ../assets/images/projects/ctgu/10.jpg
     title: CTGU
+    body-heading: Built Form Follows Landscape Form
+    body-text: Inspired by Chinese architectural princples, nature is taken as a design force for guiding the project. The building is thought to fall into the background, allowing the landscape to come to the forefront of the experience. By minimizing the building footprint, the built form becomes a machine for improving the landscape, while trying not to disturb in the process. Passive design principles are integrated, controlling solar heat gain and regulating natural ventilation flows in the building given the vastness of the facade's surface area.  
+
   - image_path: ../assets/images/projects/ctgu/5.jpg
     title: CTGU
   - image_path: ../assets/images/projects/ctgu/9.jpg
     title: CTGU
   - image_path: ../assets/images/projects/ctgu/3.jpg
     title: CTGU
-    caption-right: "The connection to the campus waterways, and the flow of urban run-off through the overall landscape, was a driving principle of the project. Mycofiltration is integrated into the pedestrian boardwalk network under the building.The site boundary is highlighted in red to illustrate the ecological context."
+    caption-right: "The flow of campus waterways and urban run-off was a driving principle of the project. Mycofiltration is integrated into the pedestrian boardwalk network under the building.The site boundary is highlighted in red to illustrate the ecological context."
   - image_path: ../assets/images/projects/ctgu/4.jpg
     title: CTGU
 
