--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 						<p>Armed with the tools of both an architect and a digital strategist, I am a passionate brand storyteller who is dedicated to crafting engaging human experiences in the real world. By seeing branded storytelling from both a spatial and a pixel scale, these crafted experiences prompt a strong sense of engagement through a holistic approach. I believe in applying the elements of storytelling and play to build stronger relationships through brand design in the real-world.</p>
 
-						<p><a href="/about">Read More</a></p>
+						<p><a href="/profile">Read More</a></p>
 
 					</div>
 
