--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Jamie Kwan | About
+title: Jamie Kwan | Profile
 ---
 
 <!-- HOME -->
@@ -39,7 +39,7 @@ title: Jamie Kwan | About
 
 					<div class="col-sm-6">
 
-						<h2 class="module-title font-alt">About</h2>
+						<h2 class="module-title font-alt">Profile</h2>
 
 					</div>
 
