--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ title: Jamie Kwan | Experience Design & Strategy
 			</div>
 
 			<!-- PORTFOLIO LIST -->
-			<ul id="works-grid" class="works-grid works-grid-masonry works-grid-3 works-hover-w">
+			<ul id="works-grid projects" class="works-grid works-grid-masonry works-grid-3 works-hover-w page-scroll">
 
 				<!-- PORTFOLIO ITEM -->
 				<li class="work-item exhibition">
