--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: Jamie Kwan | Experience Design & Strategy
 	<div class="wrapper">
 
 		<!-- PORTFOLIO -->
-		<section class="module-small p-t-20 p-b-0 p-t-sm-0">
+		<section class="module-small p-t-20 p-b-0 p-t-sm-0" id="projects">
 
 			<div class="container hidden-xs">
 
@@ -61,7 +61,7 @@ title: Jamie Kwan | Experience Design & Strategy
 			</div>
 
 			<!-- PORTFOLIO LIST -->
-			<ul id="works-grid projects" class="works-grid works-grid-masonry works-grid-3 works-hover-w page-scroll">
+			<ul id="works-grid" class="works-grid works-grid-masonry works-grid-3 works-hover-w">
 
 				<!-- PORTFOLIO ITEM -->
 				<li class="work-item exhibition">
