--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: Jamie Kwan | Experience Design & Strategy
 	<div class="wrapper">
 
 		<!-- PORTFOLIO -->
-		<section class="module-small p-t-20 p-b-0 p-t-sm-0" id="projects">
+		<section class="module-small p-t-20 p-b-0 p-t-sm-0 page-scroll" id="projects">
 
 			<div class="container hidden-xs">
 
